# oneline-eyre

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs
tests/: oneline.rs
